# SUAIScheduleApi2

./: .gitignore  Dockerfile  Makefile  dockerAppConf.yaml  main.py  portainer_agent.yaml  pyproject.toml  test.json  tete.json
common/: __init__.py  settings.py
docker-file/: Dockerfile  dockerAppConf.yaml  dockerAppEnviron.yaml
logger/: logger.py
models/: README.md  Schemes.py  datebase.py  schemes.py
models/interface/: class.py  class_.py  classrooms.py  day_weeks.py  groups.py  news.py  role.py  roles.py  schedule_changes.py  subjects.py  teachers.py  teachers_class.py  teachers_schedule_changes.py  time_class.py  token.py  token_type.py  type_week.py  user_token.py  users.py
routers/: README.md  __init__.py  default.py  default_values.py  log.py  schedule.py  user.py
routers/UserENTER/: authentication.py  authorization.py
servises/: get_default_values.py  get_schedule.py  user.py
templates/: templates_handler_log.html
